--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --logHeapUsage --watch"
   },
   "keywords": [],
   "author": "",
@@ -12,8 +12,8 @@
   "description": "",
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "esbuild-jest": "^0.5.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.6",
     "typescript": "^5.8.2"
   }
 }
